[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Vox/Fireball.vox" type="ArrayMesh" id=1]
[ext_resource path="res://Scripts/Fireball.gd" type="Script" id=2]
[ext_resource path="res://Assets/Flames.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Sounds/fireball_explode.mp3" type="AudioStream" id=4]

[sub_resource type="CapsuleShape" id=1]
radius = 0.0875458
height = 0.0748984

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 1, 0.301961, 0, 1 )

[sub_resource type="CubeMesh" id=3]
material = SubResource( 2 )
size = Vector3( 0.02, 0.02, 0.02 )

[sub_resource type="Curve" id=5]
max_value = 2.0
_data = [ Vector2( 0, 2 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=4]
colors = PoolColorArray( 0.527512, 0.0701677, 0.0701677, 1, 0.84319, 0.338364, 0.0606099, 1 )

[node name="Fireball" type="Spatial"]
script = ExtResource( 2 )

[node name="Root" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.075, 0 )

[node name="Fireball" type="MeshInstance" parent="Root"]
transform = Transform( -1.31134e-09, 0, -0.03, 0, 0.03, 0, 0.03, 0, -1.31134e-09, 0, 0, 0 )
mesh = ExtResource( 1 )
skeleton = NodePath("../..")
material/0 = null

[node name="Area" type="Area" parent="Root"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.072607, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Root/Area"]
shape = SubResource( 1 )

[node name="Flames" parent="." instance=ExtResource( 3 )]

[node name="Explosion" type="CPUParticles" parent="."]
emitting = false
amount = 16
one_shot = true
explosiveness = 1.0
local_coords = false
mesh = SubResource( 3 )
emission_shape = 1
emission_sphere_radius = 0.07
spread = 180.0
gravity = Vector3( 0, 0.1, 0 )
initial_velocity = 0.4
initial_velocity_random = 0.2
scale_amount_curve = SubResource( 5 )
color = Color( 0.301961, 0.0235294, 0.0235294, 1 )
color_ramp = SubResource( 4 )

[node name="ExplosionSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 4 )
unit_db = -5.0

[node name="Timer" type="Timer" parent="."]

[node name="Lifetime" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="area_entered" from="Root/Area" to="." method="_on_Area_area_entered"]
[connection signal="body_entered" from="Root/Area" to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Lifetime" to="." method="_on_Lifetime_timeout"]
